--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubUserSearch</string>
+
+    <string name="search_label">Search</string>
+    <string name="search_hint">Enter Name</string>
 </resources>
