--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="search_label">Search</string>
     <string name="search_hint">Enter Name</string>
+    <string name="text_repositories">repositories</string>
 </resources>
