--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="search_label">Search</string>
     <string name="search_hint">Enter Name</string>
     <string name="text_repositories">repositories</string>
+    <string name="text_not_valid">N/A</string>
+    <string name="text_followers_and_followings">"Followers - %1$s           Following - %2$s"</string>
 </resources>
