--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="search_hint">Enter Name</string>
     <string name="text_repositories">repositories</string>
     <string name="text_not_valid">N/A</string>
+    <string name="text_Url">Url</string>
+    <string name="text_Bio">Bio</string>
     <string name="text_followers_and_followings">"Followers - %1$s           Following - %2$s"</string>
+    <string name="text_repos_and_gists">"Public Repos - %1$s           Public Gists - %2$s"</string>
 </resources>
