--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="text_not_valid">N/A</string>
     <string name="text_Url">Url</string>
     <string name="text_Bio">Bio</string>
+    <string name="text_no_internet">"Couldn't reach server, check your internet connection."</string>
+    <string name="text_max_limit_reached">"You have reached maximum search limit. You may try again later"</string>
     <string name="text_followers_and_followings">"Followers - %1$s           Following - %2$s"</string>
     <string name="text_repos_and_gists">"Public Repos - %1$s           Public Gists - %2$s"</string>
 </resources>
